edited intro-text, adjusted regForm to avoid overlap by intro div

--- a/LandingPage/style.css
+++ b/LandingPage/style.css
@@ -32,7 +32,7 @@ p.tagline {
     height:400px;
     right: -100%;
     position:fixed;
-    top:50%; margin-top:-50px; /* vertical center */
+    top:40%; margin-top:-50px; /* vertical center */
     margin-left:-100px; /* horizontal center */  
 }
 
